tests/baselines/reference/declarationEmit_UnknownImport2.errors.txt
tests/cases/compiler/declarationEmit_UnknownImport2.ts(2,1): error TS2304: Cannot find name 'From'.
tests/cases/compiler/declarationEmit_UnknownImport2.ts(2,12): error TS1005: '=' expected.
tests/cases/compiler/declarationEmit_UnknownImport2.ts(2,12): error TS2503: Cannot find namespace 'From'.
tests/cases/compiler/declarationEmit_UnknownImport2.ts(2,12): error TS4000: Import declaration 'Foo' is using private name 'From'.
tests/cases/compiler/declarationEmit_UnknownImport2.ts(2,17): error TS1005: ';' expected.


==== tests/cases/compiler/declarationEmit_UnknownImport2.ts (5 errors) ====
    
    import Foo From './Foo'; // Syntax error
    ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'From'.
               ~~~~
!!! error TS1005: '=' expected.
               ~~~~
!!! error TS2503: Cannot find namespace 'From'.
               ~~~~
!!! error TS4000: Import declaration 'Foo' is using private name 'From'.
                    ~~~~~~~
!!! error TS1005: ';' expected.
    export default Foo